--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#FFCD00"
+primaryColor="rgb(0,70,180)"
 backgroundColor="#FFFFFF"
-secondaryBackgroundColor="rgb(0,70,180)"
+secondaryBackgroundColor="#FFCD00"
 textColor="#262730"
 font="sans serif"
