--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="rgb(0,70,180)"
+primaryColor="#FFCD00"
 backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#FFCD00"
-textColor="#262730"
+secondaryBackgroundColor="rgb(0,70,180)"
+textColor="#FFFFFF"
 font="sans serif"
