--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,5 +2,5 @@
 primaryColor="#FFCD00"
 backgroundColor="#FFFFFF"
 secondaryBackgroundColor="rgb(0,70,180)"
-textColor="#FFFFFF"
+textColor="rgb(0,0,0)"
 font="sans serif"
