--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ primaryColor="#FFCD00"
 backgroundColor="#FFFFFF"
 secondaryBackgroundColor="rgb(0,70,180)"
 textColor="rgb(0,0,0)"
-font="sans serif"
+font="Lato"
